--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
-        pip install -r requirements.txt
+        pip install flake8 sh fsspec numpy numcodecs
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
