--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        sudo apt install tree
         python -m pip install --upgrade pip
         pip install flake8 sh fsspec numpy numcodecs
     - name: Lint with flake8
